# airbnb-clone-prac-

./: pyproject.toml
common/: models.py
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
rooms/: admin.py  models.py
rooms/migrations/: 0001_initial.py  0002_room_name.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
