[tool.poetry]
name = "airbnb-clone-prac-"
version = "0.1.0"
description = ""
authors = ["Lyuha <110347571+Lyuhamin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_prac_"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
